<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OBDII</string>

    <!-- drawer -->
    <string name="drawer_open">打开侧边栏</string>
    <string name="drawer_close">关闭侧边栏</string>

    <!-- Network -->
    <string name="connection_fail">无法连接网络</string>

    <!-- Sign in -->
    <string name="username">电子邮箱</string>
    <string name="password">密码</string>
    <string name="sign_in">登录</string>
    <string name="forget">忘记密码</string>
    <string name="username_empty">请输入用户名</string>
    <string name="password_empty">请输入密码</string>
    <string name="sign_in_executing">登录中……</string>
    <string name="sign_in_fail">用户名或密码错误</string>

    <!-- Travel Info -->
    <string name="arrow">箭头</string>

    <!-- average oil -->
    <string name="oil_x_label">最近行驶次数</string>
    <string name="oil_y_label">耗油（0.01百公里/升）</string>

    <!-- average speed -->
    <string name="speed_x_label">最近行驶次数</string>
    <string name="speed_y_label">速度（km/h）</string>

    <!-- average mileage -->
    <string name="mileage_x_label">最近行驶次数</string>
    <string name="mileage_y_label">里程（km）</string>

    <!-- Navigation Drawer-->
    <string name="car_route">行车轨迹</string>
    <string name="OBD_data">OBD数据</string>
    <string name="travel_info">行程信息</string>
    <string name="statistics">数据统计</string>
    <string name="oil_consume_average">平均油耗</string>
    <string name="speed_average">平均速度</string>
    <string name="mileage">里程统计</string>
    <string name="check_alert">检测指标</string>

    <!-- alert check -->
    <string name="accelerate">急加速</string>
    <string name="battery_serving">电池供电</string>
    <string name="battery_over_pressure">电池过压</string>
    <string name="out_of_matrix_region">出矩阵区域报警</string>
    <string name="warranty_period">保养期报警</string>
    <string name="urgent_accelerate">紧急加速</string>
    <string name="vibrating_alert">震动报警</string>
    <string name="brake">急刹车</string>

    <string name="speeding_alert">超速报警</string>
    <string name="battery_lack_pressure">电池欠压</string>
    <string name="enter_matrix_region">进矩阵报警</string>
    <string name="collision_alert">碰撞报警</string>
    <string name="high_temperature">温高报警</string>
    <string name="OBD_sever_error_alert">OBD严重故障报警</string>
    <string name="gsm_format">GSM经纬度格式</string>
    <string name="urgent_brake">紧急刹车</string>

    <string name="description_accelerate">急加速描述</string>
    <string name="description_battery_serving">电池供电描述</string>
    <string name="description_battery_over_pressure">电池过压描述</string>
    <string name="description_out_of_matrix_region">出矩阵区域报警描述</string>
    <string name="description_warranty_period">保养期报警描述</string>
    <string name="description_urgent_accelerate">紧急加速描述</string>
    <string name="description_vibrating_alert">震动报警描述</string>
    <string name="description_brake">急刹车描述</string>

    <string name="description_speeding_alert">超速报警描述</string>
    <string name="description_battery_lack_pressure">电池欠压描述</string>
    <string name="description_enter_matrix_region">进矩阵报警描述</string>
    <string name="description_collision_alert">碰撞报警描述</string>
    <string name="description_high_temperature">温高报警描述</string>
    <string name="description_OBD_sever_error_alert">OBD严重故障报警描述</string>
    <string name="description_gsm_format">GSM经纬度格式描述</string>
    <string name="description_urgent_brake">紧急刹车描述</string>

    <!-- Travel info details -->
    <string name="travel_info_detail">行程详情</string>
    <string name="max_speed">最大速度：</string>
    <string name="timeout_length">超时时长：</string>
    <string name="brake_times">急刹车次数：</string>
    <string name="urgent_brake_time">紧急刹车次数：</string>
    <string name="accelerate_times">急加速次数：</string>
    <string name="urgent_accelerate_times">紧急加速次数：</string>
    <string name="engine_highest_temperature">发动机最高水温：</string>
    <string name="engine_highest_rotation_speed">发动机最高转速：</string>
    <string name="voltage">电压值：</string>
    <string name="total_oil_consuming">总油耗：</string>
    <string name="fatigue_driving_time">疲劳驾驶时长：</string>
    <string name="average_oil">平均油耗：</string>
    <string name="average_speed">平均速度：</string>

    <!-- OBD -->
    <string name="dial_desc">速度表盘</string>
    <string name="pointer_desc">速度指针</string>
    <string name="speed_unit">km/h</string>
    <string name="obd_voltage">电池电压</string>
    <string name="voltage_unit">(0.1V)</string>
    <string name="obd_coolant_temperature">冷却液温度</string>
    <string name="temperature_unit">°C</string>
    <string name="obd_rotate_speed">发送机转速</string>
    <string name="rotate_speed_unit">(转每分)</string>
    <string name="arrow_right_desc">右箭头</string>
    <string name="arrow_left_desc">左箭头</string>
    <string name="obd_oil_left">燃油液位输入</string>
    <string name="oil_left_unit">%</string>
    <string name="obd_pressure">大气压</string>
    <string name="pressure_unit">KPa</string>
    <string name="obd_air_temperature">环境空气温度</string>

    <string name="fault_warning">您的爱车出现了以下的故障，请尽快修理</string>
    <string name="fault_warning_notification">您的爱车出现了故障，请尽快修理</string>
    <string name="expand_for_details">展开通知查看详细</string>
    <string name="ok">确定</string>

    <string name="press_again_to_exit">请再按一次退出</string>

    <string name="please_enter_your_email"> 请输入您的登陆邮箱，我们会把找回密码的链接发送给您</string>
    <string name="cancel">取消</string>
    <string name="email_sent">已发送邮件，请查收</string>

</resources>
