<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingBottom="5dp">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/voltage_max_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/voltage_divider"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <View
                android:id="@+id/voltage_diagram"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true" />

            <TextView
                android:id="@+id/voltage_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center" />
        </RelativeLayout>

        <View
            android:id="@+id/voltage_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/voltage_name"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/title_color" />

        <TextView
            android:id="@+id/voltage_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/obd_voltage"
            android:textColor="@color/title_color" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/coolant_temperature_max_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/coolant_temperature_divider"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <View
                android:id="@+id/coolant_temperature_diagram"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true" />

            <TextView
                android:id="@+id/coolant_temperature_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center" />
        </RelativeLayout>

        <View
            android:id="@+id/coolant_temperature_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/coolant_temperature_name"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/title_color" />

        <TextView
            android:id="@+id/coolant_temperature_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/obd_coolant_temperature"
            android:textColor="@color/title_color" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/rotate_speed_max_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rotate_speed_divider"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <View
                android:id="@+id/rotate_speed_diagram"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true" />

            <TextView
                android:id="@+id/rotate_speed_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center" />
        </RelativeLayout>

        <View
            android:id="@+id/rotate_speed_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/rotate_speed_name"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/title_color" />

        <TextView
            android:id="@+id/rotate_speed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/obd_rotate_speed"
            android:textColor="@color/title_color" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/arrow_right_desc"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:src="@drawable/arrow_right" />

</LinearLayout>