<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:baselineAligned="false"
              android:orientation="horizontal"
              android:paddingBottom="5dp">

    <ImageView
        android:id="@+id/arrow_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/arrow_left_desc"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:src="@drawable/arrow_left"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/oil_left_max_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/oil_left_divider"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/oil_left_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"/>

            <View
                android:id="@+id/oil_left_diagram"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#F9CDAD"
                android:scaleY="0"/>
        </RelativeLayout>

        <View
            android:id="@+id/oil_left_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/oil_left_name"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/title_color"/>

        <TextView
            android:id="@+id/oil_left_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/obd_oil_left"
            android:textColor="@color/title_color"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/pressure_max_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/pressure_divider"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pressure_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"/>

            <View
                android:id="@+id/pressure_diagram"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#F9CDAD"
                android:scaleY="0"/>
        </RelativeLayout>

        <View
            android:id="@+id/pressure_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/pressure_name"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/title_color"/>

        <TextView
            android:id="@+id/pressure_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/obd_pressure"
            android:textColor="@color/title_color"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/air_temperature_max_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/air_temperature_divider"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/air_temperature_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"/>

            <View
                android:id="@+id/air_temperature_diagram"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#F9CDAD"
                android:scaleY="0"/>
        </RelativeLayout>

        <View
            android:id="@+id/air_temperature_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/air_temperature_name"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/title_color"/>

        <TextView
            android:id="@+id/air_temperature_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/obd_air_temperature"
            android:textColor="@color/title_color"/>
    </RelativeLayout>

</LinearLayout>